--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Adevărul despre industrie</title>
   <style>
     body {
@@ -12,48 +12,47 @@
       margin: 0;
       padding: 0;
     }
+
     header {
       background: #dc3545;
       padding: 2rem;
       text-align: center;
     }
+
     header h1 {
       margin: 0;
       font-size: 2rem;
     }
+
     main {
       padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-      line-height: 1.7;
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    h2 {
-      color: #ffc107;
-      margin-top: 1.5rem;
-    }
-    footer {
-      background: #222;
-      color: #bbb;
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
     }
-    .contact {
-      background: #1c1c1c;
-      padding: 1.5rem;
-      border-radius: 8px;
+
+    main h2 {
+      font-size: 1.5rem;
+      color: #ffc107;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
+    .contact-info {
       margin-top: 2rem;
     }
-    .contact p {
+
+    .contact-info p {
       margin: 0.5rem 0;
     }
+
     a {
-      color: #0dcaf0;
+      color: #17a2b8;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
@@ -61,36 +60,21 @@
 </head>
 <body>
   <header>
-    <h1>Stop Pariuri 🎯</h1>
-    <p>Adevărul despre industrie și cum să scapi din capcană</p>
+    <h1>Stop Pariuri</h1>
   </header>
 
   <main>
-    <section>
-      <h2>📉 De ce NU câștigi pe termen lung?</h2>
-      <p>Industria pariurilor sportive este construită pe un model matematic unde <strong>casa are mereu avantaj</strong>. Chiar dacă ai câteva câștiguri inițiale, pe termen lung, majoritatea jucătorilor pierd.</p>
-    </section>
+    <h2>Hai să vorbim, fără promisiuni false. Doar realitate și soluții.</h2>
 
-    <section>
-      <h2>💸 Iluzia controlului</h2>
-      <p>Operatorii folosesc statistici, bonusuri și trucuri psihologice pentru a te face să joci mai mult. 99% dintre meciuri sunt ajustate astfel încât <strong>valoarea cotelor să fie în favoarea lor</strong>.</p>
-    </section>
+    <p>
+      Dacă simți că industria pariurilor sportive te afectează financiar, emoțional sau psihologic, nu ești singur.
+      Nu îți promit câștiguri. Nu îți vând vise. Îți ofer doar adevăruri și soluții reale.
+    </p>
 
-    <section>
-      <h2>🧠 Soluția: Educație & Control</h2>
-      <p>În loc să pierzi bani, învață cum funcționează sistemul. Învață despre <em>arbitraj, bankroll management, manipulare psihologică</em> și <strong>cum să te oprești</strong>.</p>
-    </section>
-
-    <section class="contact">
-      <h2>📞 Contactează-mă pentru ajutor real</h2>
-      <p>💬 WhatsApp: <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></p>
-      <p>📸 Instagram: <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></p>
-      <p>Hai să vorbim. Gratuit. Fără promisiuni false. Doar realitate și soluții.</p>
-    </section>
+    <div class="contact-info">
+      <p><strong>📞 WhatsApp:</strong> <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></p>
+      <p><strong>📸 Instagram:</strong> <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></p>
+    </div>
   </main>
-
-  <footer>
-    &copy; 2025 Stop Pariuri. Educație în loc de pierdere.
-  </footer>
 </body>
 </html>
