Update contact section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stop Pariuri – Adevărul despre industrie</title>
   <style>
     body {
@@ -24,37 +24,35 @@
       font-size: 2rem;
     }
 
-    main {
+    .content {
       padding: 2rem;
-      text-align: center;
-    }
-
-    main h2 {
-      font-size: 1.5rem;
-      color: #ffc107;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1.1rem;
       line-height: 1.6;
     }
 
-    .contact-info {
+    .contact {
       margin-top: 2rem;
+      background: #222;
+      padding: 1.5rem;
+      border-radius: 8px;
     }
 
-    .contact-info p {
+    .contact h2 {
+      color: #00ffcc;
+    }
+
+    .contact a {
+      color: #1e90ff;
+      text-decoration: none;
+      display: block;
       margin: 0.5rem 0;
     }
 
-    a {
-      color: #17a2b8;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #000;
+      color: #777;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -63,18 +61,18 @@
     <h1>Stop Pariuri</h1>
   </header>
 
-  <main>
-    <h2>Hai să vorbim, fără promisiuni false. Doar realitate și soluții.</h2>
+  <div class="content">
+    <p>Hai să vorbim, fără promisiuni false. Doar realitate și soluții.</p>
 
-    <p>
-      Dacă simți că industria pariurilor sportive te afectează financiar, emoțional sau psihologic, nu ești singur.
-      Nu îți promit câștiguri. Nu îți vând vise. Îți ofer doar adevăruri și soluții reale.
-    </p>
-
-    <div class="contact-info">
-      <p><strong>📞 WhatsApp:</strong> <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></p>
-      <p><strong>📸 Instagram:</strong> <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></p>
+    <div class="contact">
+      <h2>Contactează-mă pentru ajutor real:</h2>
+      <a href="https://wa.me/40754951373" target="_blank">📱 WhatsApp: +40 754 951 373</a>
+      <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">📸 Instagram: @meferrrrrrrrrr</a>
     </div>
-  </main>
+  </div>
+
+  <footer>
+    &copy; 2025 Stop-Pariuri. Toate drepturile rezervate.
+  </footer>
 </body>
 </html>
