--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Adevărul despre industrie</title>
   <style>
     body {
@@ -24,34 +24,49 @@
       font-size: 2rem;
     }
 
-    .content {
+    main {
       padding: 2rem;
+      text-align: center;
+    }
+
+    main h2 {
+      font-size: 1.5rem;
+      color: #ffc107;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.1rem;
       line-height: 1.6;
     }
 
-    .contact {
-      margin-top: 2rem;
+    .section {
+      margin-bottom: 3rem;
+    }
+
+    .contact-info {
       background: #222;
       padding: 1.5rem;
       border-radius: 8px;
+      margin-top: 2rem;
     }
 
-    .contact h2 {
-      color: #00ffcc;
-    }
-
-    .contact a {
+    .contact-info a {
       color: #1e90ff;
       text-decoration: none;
       display: block;
       margin: 0.5rem 0;
     }
 
+    .contact-info a:hover {
+      text-decoration: underline;
+    }
+
     footer {
+      background: #000;
+      color: #999;
       text-align: center;
       padding: 1rem;
-      background: #000;
-      color: #777;
       font-size: 0.9rem;
     }
   </style>
@@ -61,15 +76,47 @@
     <h1>Stop Pariuri</h1>
   </header>
 
-  <div class="content">
-    <p>Hai să vorbim, fără promisiuni false. Doar realitate și soluții.</p>
+  <main>
+    <div class="section">
+      <h2>Hai să vorbim, fără promisiuni false. Doar realitate și soluții.</h2>
+      <p>
+        Dacă simți că pariurile îți afectează viața personală sau financiară, e timpul să privești realitatea în față.
+        Industria pariurilor nu este făcută pentru ca tu să câștigi. Este construită să te țină prins, să îți dea
+        impresia controlului și a șansei.
+      </p>
+    </div>
 
-    <div class="contact">
-      <h2>Contactează-mă pentru ajutor real:</h2>
+    <div class="section">
+      <h2>De ce NU câștigi pe termen lung?</h2>
+      <p>
+        Casele de pariuri au întotdeauna avantajul matematic. Chiar și atunci când câștigi, ești tentat să reinvestești,
+        pierzând totul. Emoțiile te controlează, nu logica. Este un joc pierdut încă dinainte să înceapă.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Iluzia controlului</h2>
+      <p>
+        Bonusuri, "cash-out", pariuri live, combinații "safe" – toate sunt capcane psihologice. Tu nu controlezi jocul.
+        Pariurile sportive sunt programate să îți ofere ocazional câștiguri ca să te țină dependent.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Soluția: Educație & Control</h2>
+      <p>
+        Nu trebuie să îți fie rușine. Mii de oameni trec prin asta. Ce trebuie să faci este să înțelegi mecanismul.
+        Să îți controlezi impulsurile. Să devii conștient că „meciul sigur” nu există.
+      </p>
+    </div>
+
+    <div class="contact-info">
+      <h2>Contactează-mă pentru ajutor real</h2>
+      <p>Dacă vrei să discutăm sincer, direct și fără promisiuni false:</p>
       <a href="https://wa.me/40754951373" target="_blank">📱 WhatsApp: +40 754 951 373</a>
       <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">📸 Instagram: @meferrrrrrrrrr</a>
     </div>
-  </div>
+  </main>
 
   <footer>
     &copy; 2025 Stop-Pariuri. Toate drepturile rezervate.
