--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Adevărul despre industrie</title>
   <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #111;
@@ -15,12 +21,13 @@
 
     header {
       background: linear-gradient(to right, #dc3545, #ff6f61);
-      padding: 1rem 2rem;
+      padding: 1rem 1.5rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
       border-bottom: 3px solid #ffb347;
       box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      flex-wrap: wrap;
     }
 
     .logo {
@@ -55,6 +62,7 @@
     p {
       font-size: 1.1rem;
       line-height: 1.6;
+      margin-bottom: 1.5rem;
     }
 
     .section {
@@ -73,6 +81,7 @@
       text-decoration: none;
       display: block;
       margin: 0.5rem 0;
+      font-size: 1.1rem;
     }
 
     .contact-info a:hover {
@@ -85,6 +94,41 @@
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
+    }
+
+    /* ✅ Responsive Mobile Adjustments */
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .title h1 {
+        font-size: 1.8rem;
+        margin-top: 0.5rem;
+      }
+
+      main {
+        padding: 1rem;
+      }
+
+      main h2 {
+        font-size: 1.3rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      .contact-info a {
+        font-size: 1rem;
+      }
+
+      .logo {
+        height: 50px;
+        width: 50px;
+      }
     }
   </style>
 </head>
