--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
     .contact button:hover {
       background: #e0a800;
     }
+
+    /* Responsive pentru mobil */
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.5rem;
+      }
+      main {
+        padding: 1rem;
+      }
+      .contact {
+        padding: 1rem;
+      }
+      .contact button {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
