--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Stop Pariuri</div>
+      
+    <div class="logo">
+      <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">
+      <span style="vertical-align: middle;">Stop Pariuri</span>
+    </div>
+    
       <ul class="nav-links">
         <li><a href="#acasa">Acasă</a></li>
         <li><a href="#despre">Despre</a></li>
