--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Stop Pariuri – Realitate, nu iluzii</title>
   <style>
     :root {
-      --primary: #1e3a8a;  /* albastru navy */
-      --accent: #f97316;   /* portocaliu cald */
-      --bg: #f1f5f9;       /* gri-alb soft */
-      --text: #1e293b;     /* gri închis */
+      --primary: #1e3a8a;
+      --accent: #f97316;
+      --bg: #f1f5f9;
+      --text: #1e293b;
     }
 
     * {
@@ -46,6 +46,13 @@
     .logo {
       font-size: 1.5rem;
       font-weight: bold;
+      display: flex;
+      align-items: center;
+    }
+
+    .logo img {
+      height: 36px;
+      margin-right: 10px;
     }
 
     ul.nav-links {
@@ -86,18 +93,15 @@
       color: #334155;
       font-size: 0.9rem;
     }
-
   </style>
 </head>
 <body>
   <header>
     <nav>
-      
-    <div class="logo">
-      <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">
-      <span style="vertical-align: middle;">Stop Pariuri</span>
-    </div>
-    
+      <div class="logo">
+        <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" />
+        <span>Stop Pariuri</span>
+      </div>
       <ul class="nav-links">
         <li><a href="#acasa">Acasă</a></li>
         <li><a href="#despre">Despre</a></li>
@@ -110,8 +114,10 @@
 
   <main>
     <section id="acasa">
-      <h1>Bine ai venit</h1>
-      <p>Aici începem călătoria spre claritate, control și adevăr în fața jocurilor de noroc.</p>
+      <h1>Ai ajuns unde trebuie.</h1>
+      <p>Nu e o platformă care îți promite câștiguri rapide. E o pagină sinceră. Un semnal de alarmă pentru cei care simt că jocurile de noroc le controlează viața.</p>
+      <p>Fie că ai pierdut bani, timp sau încredere în tine – aici nu te judecă nimeni.</p>
+      <a href="#despre" style="display:inline-block;margin-top:1rem;padding:0.5rem 1rem;background-color:#f97316;color:white;text-decoration:none;border-radius:4px;">Află mai multe</a>
     </section>
 
     <section id="despre">
@@ -123,5 +129,17 @@
   <footer>
     © 2025 StopPariuri – Educație, Nu Iluzii
   </footer>
+
+  <script>
+    document.querySelectorAll('a[href^="#"]').forEach(link => {
+      link.addEventListener("click", function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute("href"));
+        if (target) {
+          target.scrollIntoView({ behavior: "smooth" });
+        }
+      });
+    });
+  </script>
 </body>
 </html>
