--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
       <h2>Despre proiect</h2>
       <p>Acest site este un semnal de alarmă pentru cei care cred că pot bate sistemul. Realitatea nu minte, dar promisiunile cazinourilor – da.</p>
     </section>
+  
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Dacă ai nevoie de ajutor sau vrei să vorbim direct, mă poți contacta oricând:</p>
+  <ul style="list-style: none; padding-left: 0;">
+    <li>📱 Telefon / WhatsApp: <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></li>
+    <li>📸 Instagram: <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></li>
+  </ul>
+</section>
+
   </main>
 
   <footer>
