--- a/index.html
+++ b/index.html
@@ -125,7 +125,21 @@
       <p>Acest site este un semnal de alarmă pentru cei care cred că pot bate sistemul. Realitatea nu minte, dar promisiunile cazinourilor – da.</p>
     </section>
   
+
+<section id="consiliere">
+  <h2>Consiliere și sprijin real</h2>
+  <p>Te-ai săturat să pierzi bani, timp și liniște sufletească? Nu ești singur.</p>
+  <p>Fie că ai nevoie de cineva care doar să te asculte, fie că vrei o strategie reală ca să te oprești, putem vorbi.</p>
+  <ul style="margin-left:1rem;">
+    <li>🔹 Îți arăt pașii practici prin care poți ieși din cercul vicios</li>
+    <li>🔹 Fără judecată. Fără promisiuni false. Doar adevăr și fapte</li>
+    <li>🔹 Ghidare 1-la-1 prin mesaje sau apel, dacă vrei</li>
+  </ul>
+  <p style="margin-top:1rem;">💬 Scrie-mi oricând pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a> sau pe <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">Instagram</a>.</p>
+</section>
+
 <section id="contact">
+
   <h2>Contact</h2>
   <p>Dacă ai nevoie de ajutor sau vrei să vorbim direct, mă poți contacta oricând:</p>
   <ul style="list-style: none; padding-left: 0;">
