--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@
     </section>
   
 
+
+<section id="resurse">
+  <h2>Resurse & Strategii care dau iluzia câștigului</h2>
+  <p>Internetul e plin de strategii care promit profit sigur, dar realitatea bate promisiunea. Hai să vedem câteva exemple care pot păcăli:</p>
+
+  <h3>🎯 Arbitrage Betting (Sure Bets)</h3>
+  <p>Teoria: pariezi pe toate variantele posibile la cote diferite, astfel încât să ai profit indiferent de rezultat.<br>
+  Realitatea: Platformele detectează rapid această metodă, limitează conturile sau blochează câștigurile. Diferențele de cote dispar rapid. Risk enorm pentru un profit mic.</p>
+
+  <h3>🎲 Martingala la ruletă</h3>
+  <p>Teoria: Dublezi miza după fiecare pierdere ca să recuperezi tot și să ieși pe plus.<br>
+  Realitatea: După câteva pierderi consecutive riști să îți pierzi tot bugetul. Cazinourile au limite de pariere exact din acest motiv.</p>
+
+  <h3>📈 „Analiza” biletelor pe TikTok / YouTube</h3>
+  <p>Influenceri care pariază sume uriașe și câștigă „live” – dar nu arată niciodată toate pierderile. E doar marketing plătit de casele de pariuri.</p>
+
+  <p style="margin-top:1rem;">💡 <strong>Concluzie:</strong> Nicio strategie nu bate sistemul. Singura victorie reală e când alegi să te oprești.</p>
+</section>
+
 <section id="consiliere">
   <h2>Consiliere și sprijin real</h2>
   <p>Te-ai săturat să pierzi bani, timp și liniște sufletească? Nu ești singur.</p>
