--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <li><a href="#despre">Despre</a></li>
         <li><a href="#resurse">Resurse</a></li>
         <li><a href="#consiliere">Consiliere</a></li>
+        <li><a href="#pachete">Pachete</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -155,6 +156,36 @@
     <li>🔹 Ghidare 1-la-1 prin mesaje sau apel, dacă vrei</li>
   </ul>
   <p style="margin-top:1rem;">💬 Scrie-mi oricând pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a> sau pe <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">Instagram</a>.</p>
+</section>
+
+
+<section id="pachete">
+  <h2>Pachete de consiliere</h2>
+  <p>Consilierea este 100% confidențială și personalizată. Fiecare sesiune este gândită să te ajute să înțelegi cauza dependenței și cum să ieși din ea.</p>
+
+  <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
+    <div style="flex: 1; min-width: 250px; background: #fef3c7; padding: 1rem; border-radius: 8px;">
+      <h3>🔹 1 ședință</h3>
+      <p>Explorăm situația ta și îți ofer un plan personalizat de primă etapă.</p>
+      <p><strong>Preț: 100 RON</strong></p>
+    </div>
+
+    <div style="flex: 1; min-width: 250px; background: #d1fae5; padding: 1rem; border-radius: 8px;">
+      <h3>🔸 Pachet 3 ședințe</h3>
+      <p>Ghidare continuă + suport între ședințe prin mesaje.</p>
+      <p><strong>Preț: 200 RON</strong></p>
+      <p><em>(Economisești 100 RON)</em></p>
+    </div>
+
+    <div style="flex: 1; min-width: 250px; background: #e0e7ff; padding: 1rem; border-radius: 8px;">
+      <h3>🔶 Pachet 5 ședințe</h3>
+      <p>Transformare completă: analizăm în profunzime, urmărim progresul și construim un plan de viață sănătos.</p>
+      <p><strong>Preț: 300 RON</strong></p>
+      <p><em>(Economisești 200 RON)</em></p>
+    </div>
+  </div>
+
+  <p style="margin-top: 2rem;">💬 Pentru programări, scrie-mi direct pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a>.</p>
 </section>
 
 <section id="contact">
