--- a/index.html
+++ b/index.html
@@ -94,7 +94,42 @@
       font-size: 0.9rem;
     }
   
+    
     @media (max-width: 768px) {
+      header {
+        padding: 0.5rem 1rem;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .logo {
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+      }
+
+      ul.nav-links {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 0.5rem;
+        margin: 0;
+        padding: 0;
+      }
+
+      ul.nav-links li {
+        margin: 0;
+      }
+
+      ul.nav-links li a {
+        font-size: 0.9rem;
+        padding: 0.3rem 0.6rem;
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 4px;
+      }
+
       nav {
         flex-direction: column;
         align-items: flex-start;
