--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
         <li><a href="#resurse">Resurse</a></li>
         <li><a href="#consiliere">Consiliere</a></li>
         <li><a href="#pachete">Pachete</a></li>
+        <li><a href="#faq">FAQ</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -262,6 +263,27 @@
   </div>
 
   <p style="margin-top: 2rem;">💬 Pentru programări, scrie-mi direct pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a>.</p>
+</section>
+
+
+<section id="faq">
+  <h2>Întrebări frecvente</h2>
+  <details>
+    <summary>🎯 Pot câștiga bani pe termen lung din pariuri?</summary>
+    <p>Statistic, pe termen lung, casa câștigă. Chiar și când câștigi pe moment, pierderile vin inevitabil.</p>
+  </details>
+  <details>
+    <summary>💡 Ce se întâmplă într-o ședință de consiliere?</summary>
+    <p>Discutăm despre experiența ta cu jocurile, identificăm cauze și construim împreună soluții reale și aplicabile.</p>
+  </details>
+  <details>
+    <summary>📞 E confidențial?</summary>
+    <p>100%. Tot ce discutăm rămâne între noi. Fără judecată, fără expunere.</p>
+  </details>
+  <details>
+    <summary>📆 Cât durează o ședință?</summary>
+    <p>În general, o ședință durează între 45-60 de minute și se desfășoară online, prin apel sau mesaj.</p>
+  </details>
 </section>
 
 <section id="contact">
